<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/word_insert"
        android:enabled="true"
        android:id="@+id/action_word_insert"
        android:icon="@drawable/ic_insert">
    </item>
    <item
        android:title="@string/word_list"
        android:enabled="true"
        android:id="@+id/action_word_list"
        android:icon="@drawable/ic_list">
    </item>
    <item
        android:title="@string/idiom_insert"
        android:enabled="true"
        android:id="@+id/action_idiom_insert"
        android:icon="@drawable/ic_insert">
    </item>
    <item
        android:title="@string/idiom_list"
        android:enabled="true"
        android:id="@+id/action_idiom_list"
        android:icon="@drawable/ic_list">
    </item>
    <item
        android:title="@string/settings"
        android:enabled="true"
        android:id="@+id/action_setting"
        android:icon="@drawable/ic_settings">
    </item>
</menu>