<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.WordInsertFragment"
    android:gravity="center">

    <EditText
        android:id="@+id/word_insert_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_selector_design"
        android:hint="@string/word_hint" />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/insert_form_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/word_insert_edittext"
        android:text="@string/insert_word_mean"/>

    <LinearLayout
        android:id="@+id/word_mean_insert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insert_form_button"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/insert_button_set"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/word_mean_insert"
        android:gravity="center">
        <Button
            android:id="@+id/insert_list_by_dic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/naver_dic_api"
            android:drawableLeft="@drawable/image_button_customize"/>
        <Button
            android:id="@+id/insert_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_add"
            android:drawableLeft="@drawable/ic_library"/>
    </LinearLayout>


</RelativeLayout>