<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/warning_notify"
        android:textStyle="bold"
        android:id="@+id/warning_notification"
        app:drawableLeftCompat="@drawable/ic_warning" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/toolbar_warning"
        android:orientation="horizontal"
        android:layout_below="@id/warning_notification"/>

    <TextView
        android:id="@+id/warning_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_warning"
        android:text="@string/warning_isOk"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/warning_text"
        android:id="@+id/toolbar_buttons"
        android:orientation="horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/toolbar_buttons">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:text="@string/yes"
            android:id="@+id/delete_ok_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:text="@string/no"
            android:id="@+id/delete_cancel_button"/>
    </LinearLayout>

</RelativeLayout>